--- a/package.json
+++ b/package.json
@@ -3,12 +3,20 @@
   "version": "0.1.0",
   "scripts": {
     "start": "snowpack dev",
-    "build": "snowpack build"
+    "build": "rollup -c rollup.config.js",
+    "build:snowpack": "snowpack build"
   },
   "dependencies": {
+    "chart.js": "^4.4.1",
     "lit-html": "^3.1.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.23.9",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-json": "^6.1.0",
+    "babel-plugin-transform-html-import-to-string": "^2.0.0",
+    "rollup": "^2.79.1",
+    "rollup-plugin-copy": "^3.5.0",
     "snowpack": "^3.8.8"
   }
 }
