--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -3,20 +3,20 @@
   "name": "HG Wallhalla Tracker",
   "icons": [
     {
-      "src":"/assets/icon-512.png",
+      "src":"/walhalla/assets/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     },{
-      "src":"/assets/icon-256.png",
+      "src":"/walhalla/assets/icon-256.png",
       "sizes": "256x256",
       "type": "image/png"
     },{
-      "src":"/assets/icon-128.png",
+      "src":"/walhalla/assets/icon-128.png",
       "sizes": "128x128",
       "type": "image/png"
     },
     {
-      "src": "/assets/icon-maskable.png",
+      "src": "/walhalla/assets/icon-maskable.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
