--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/preset-env": "^7.23.9",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^15.2.3",
     "babel-plugin-transform-html-import-to-string": "^2.0.0",
     "rollup": "^2.79.1",
     "rollup-plugin-copy": "^3.5.0",
